--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- The first thing in any HTML file should be the charset -->
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Allow installing the app to the homescreen -->
     <link rel="manifest" href="manifest.json">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script type="text/jsx" src="https://www.google.com/recaptcha/api.js" async defer></script>
     <meta name="mobile-web-app-capable" content="yes">
     <title>Beautiful Rising</title>
   </head>
