Add climate strike footer

--- a/app/index.html
+++ b/app/index.html
@@ -40,4 +40,6 @@
        fjs.parentNode.insertBefore(js, fjs);
      }(document, 'script', 'facebook-jssdk'));
   </script>
+  <!-- Climate strike September 2019 -->
+  <script src="https://assets.digitalclimatestrike.net/widget.js" async></script>
 </html>
